--- a/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
+++ b/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
@@ -4,7 +4,7 @@
 In this section we provide details about spherical harmonics analysis to separate 0\nbb-decay signal events from backgrounds. 
 We show that spherical harmonics decomposition of the PE hits on the detector surface is sensitive to the event topology. In particular
 we focus on the differences between two-electron (0\nbb-decay events) and single-electron (\B~events) topologies. More complicated 
-event topologies such as \C~background events are also differ from two-electron topology of the signal. However, as explained in 
+event topologies such as \C~background events are also differ from two-electron signal topology. However, as explained further in 
 Sec.~\ref{subsec:c10_spherical_harmonics}, the 0\nbb/\C~separation power strongly depends on the assumptions that are built into the 
 simulation. Therefore we use only 0\nbb/\B~separation as a benchmark test for the spherical harmonics analysis performance.
 
@@ -18,14 +18,15 @@ from each of the electrons will produce ring shaped clusters of PE hits on the d
 that is capable of separating events with one Cherenkov cluster from events with two Cherenkov clusters should have signal-background 
 descrimination power. 
 
-In some cases only one Cherenkov cluster is produced in 0\nbb-decay signal events. This happens when either the angle between the two 
-0\nbb-decay electrons is not balance causing one electron to be below Cherenkov threshold. 
+In some cases only one Cherenkov cluster is produced in 0\nbb-decay signal events. This happens either when the angle between the two 
+0\nbb-decay electrons is small and Cherenkov clusters overlap or when the energy split between electrons is not balanced causing 
+one electron to be below Cherenkov threshold.
 Such signal events cannot be separated from background based on topology of the Cherenkov photons distribution on the detector surface. 
 However directionality of the electron that is above Cherenkov threshold can still be resonctructed. This directionality information would allow
 for \B~events suppresion based on the position of the sun.
 
 Identification of the Cherenkov clusters is challenging due to much higher amount of uniformly distributed scintillation ligth that is
-produced in every event. We found that spherical harmonics analysis on an early PE sample with relatively high fraction of 
+produced in every event. We found that spherical harmonics analysis on an early PE sample which has relatively high fraction of 
 Cherenkov PE makes it possile to separate some of the 0\nbb-decay signal events from backgrounds.
 
 \subsection{Description of Spherical Harmonics Analysis}
@@ -46,15 +47,17 @@ two special cases of an idealized 0\nbb-decay topology.
   \includegraphics[width=0.45\textwidth]{hDisplay_1el_10MeV.pdf}
 %  \end{tabular}
   \includegraphics[width=0.45\textwidth]{hMultipleMoment_CHELight_VtxSmear0cm_VtxShiftX0cm_999p9ns_5p0MeV_center_NoMultScat.pdf}
-  \caption{\emph{Top pannels and bottom left pannel:} Idealized event displays for the three representative event topologies: two back-to-back
-    5~MeV electrons (\emph{top left}), two 5~MeV electrons at 90$^{\circ}$ angle (\emph{top right}), and a single 10~MeV electron
+  \caption{\emph{Top pannels and bottom left pannel:} Idealized event displays for the three representative event topologies: two 5~MeV 
+    back-to-back electrons (\emph{top left}), two 5~MeV electrons at 90$^{\circ}$ angle (\emph{top right}), and a single 10~MeV electron
     (\emph{bottom right}). Multiple scattering is turned off in the simulation to emphasize the difference in the mutual orientation of
     cherenkov rings for the three topologies. For the illustration purposes 100\% QE is applied to cherenkov photons (triangles)
     and the default QE is applied to scintillation photons (dots). All electrons originate at the center of the
     detector. One typical event is shown for each topology.
     \emph{Bottom right pannel:} Normalized power spectrum $S_l$ calculated for distribution of cherenkov photons only. The three
-    topologies are compared: two back-to-back 5~MeV electrons (\emph{solid red line}), two 5~MeV electrons at 90$^{\circ}$ angle
-    (\emph{dotted magenta line}), and a single 10~MeV electron (\emph{dashed blue line}).}
+    topologies are compared: two 5~MeV back-to-back electrons (\emph{solid red line}), two 5~MeV electrons at 90$^{\circ}$ angle
+    (\emph{dotted magenta line}), and a single 10~MeV electron (\emph{dashed blue line}). For each topology 1000 events were simulated. 
+    The normalized power values $S_l$'s were calculated for each individual event. The horizontal lines correspond to the mean values of 
+    $S_l$ within each event topology. The vertical bars show one standard deviation from the mean value.}
   \label{fig:ThreeTopologies_Display_5MeV}
 \end{figure*}
 
@@ -116,9 +119,9 @@ Figure~\ref{fig:ThreeTopologies_Display_5MeV}(\emph(bottom right)) compares the 
 There is sufficien separation between these three idealized event topologies.
 
 In practice, at energies relevant to 0\nbb-decay Cherenkov rings become very fuzzy due to elecron multiple scattering. In most cases $\sim$1~MeV 
-electrons produce randomly shaped clusters of Cherenkov photons around the direction of the electron track. Examples of such Cherenkov clusters, 
-for the same three representative topologies, now with the multiple scattering process included in the simulation and the total kinetic energy of 
-the electrons being equal to the Q-value of the \Te, are shown in Fig.~\ref{fig:ThreeTopologies_Display}.
+electrons produce randomly shaped clusters of Cherenkov photons around the direction of the electron track. Examples of such Cherenkov clusters
+for the same three representative topologies are shown in Fig.~\ref{fig:ThreeTopologies_Display}. Now the multiple scattering process is included 
+in the simulation and the total kinetic energy of the electrons is equal to the Q-value of the \Te.
 
 
 \begin{figure*}[h]
@@ -136,19 +139,24 @@ the electrons being equal to the Q-value of the \Te, are shown in Fig.~\ref{fig:
     photons (dots). All electrons originate at the center of the detector. One typical event is shown for each topology.
     \emph{Bottom right pannel:} Normalized power spectrum $S_l$ calculated for distribution of cherenkov photons only. The three
     topologies are compared: two back-to-back 1.26~MeV electrons (\emph{solid red line}), two 1.26~MeV electrons at 90$^{\circ}$ angle
-    (\emph{dotted magenta line}), and a single 2.53~MeV electron (\emph{dashed blue line}).}
+    (\emph{dotted magenta line}), and a single 2.53~MeV electron (\emph{dashed blue line}). For each topology 1000 events were simulated.
+    The normalized power values $S_l$'s were calculated for each individual event. The horizontal lines correspond to the mean values of
+    $S_l$ within each event topology. The vertical bars show one standard deviation from the mean value.}
   \label{fig:ThreeTopologies_Display}
 \end{figure*}
 
 
-The difference in the Cherenkov photon distribution for the three representative topologies is now not as dramatic as in the idealized 
-simulation of 10~MeV events. However, a guess about the event topology still can be made by comparing photon distributions in different 
-segments of the detector sphere. Spherical harmonics decomposotion is a natural tool for making such comparison between the segments. 
-As shown in Fig.~\ref{fig:ThreeTopologies_Display_5MeV}(\emph(bottom right)) spherical harmonics power spectrum of Cherenkov photons only
-still provides noticable separation between all three event topologies.
+At 2.53~MeV with multiple scattering included the difference in the Cherenkov photon distribution for the three representative topologies 
+is not as dramatic as in the idealized simulation of 10~MeV events. However, a guess about the event topology still can be made by comparing 
+photon distributions in different segments of the detector sphere. Spherical harmonics decomposotion is a natural tool for making such 
+comparison between the segments. As shown in Fig.~\ref{fig:ThreeTopologies_Display}~(\emph{bottom right}) spherical harmonics power spectrum 
+of Cherenkov photons only still provides noticable separation between all three event topologies.
 
-
-More realistic examples of \Te~ 0\nbb~and \B events simulated at the center of the detector are shown in Fig.~\ref{fig:Te130_Display}. Early photoelectrons (PEs), defined as those PEs from Cherenkov and scintillation light within 33.5~ns of the start of the event, are shown. In this example, the default QE is applied.  In this more realistic example, the uniformly distributed scintillation light makes it more difficult to visually distinguish the event topology. Nevertheless, we show that there is still a difference in the spatial distribution of the early PEs to separate two-track and single-track events using an analysis of spherical harmonics.
+More realistic examples of \Te~ 0\nbb~and \B~events simulated at the center of the detector are shown in Fig.~\ref{fig:Te130_Display}. 
+Early photoelectrons (PEs), defined as those PEs from Cherenkov and scintillation light within 33.5~ns of the start of the event, are shown. 
+The default QE is applied.  In this more realistic example, the uniformly distributed scintillation light makes it more difficult to 
+visually distinguish the event topology. Nevertheless, Fig.~\ref{fig:Te130_Display}~(\emph{bottom panne}) shows that the spherical harmonics
+analysis still finds differences between two-track and single-track events.
 
 \begin{figure*}[h]
   \centering
@@ -171,14 +179,24 @@ More realistic examples of \Te~ 0\nbb~and \B events simulated at the center of t
 \end{figure*}
 
 
-As shown in the middle row of Fig.~\ref{fig:Te130_Display}, 0\nbb~events become indistinguishable from single-track events when the angle between the two electrons is small (i.e. they form two overlapping tracks). Event topologies of 0\nbb~and \B~events are also very similar when only one electron from 0\nbb~ is above the Cherenkov threshold. Therefore spherical harmonics analysis is most efficient for events with large angular separation between the two electrons and when both electrons are above Cherenkov threshold.
+As shown in the middle row of Fig.~\ref{fig:Te130_Display}, 0\nbb~events become indistinguishable from single-track events when the 
+angle between the two electrons is small and two Cherenkov clusters overlap. Event topologies of 0\nbb~and \B~events are also 
+very similar when only one electron from 0\nbb~ is above the Cherenkov threshold. Therefore spherical harmonics analysis is most 
+efficient for events with large angular separation between the two electrons and when both electrons are above Cherenkov threshold.
 
 Being able to distinguish between two-tracks and single-track events using the spherical analyses can allow further cuts to be made.  For example, one might use absolute directional information to suppress single track events where the direction of the track is consistent with the location of a known background such as the sun. Once a single track topology is established, one can use a centroid method (see Ref.~\cite{Directionality}) to reconstruct directionality of the track (or two degenerate tracks) in order to suppress events that are aligned with the direction of \B~solar neutrinos.
 
 
 \subsection{Spherical Harmonics Analysis and Off-center Events}
 
-The calculation of the normalized power spectrum, $S_I$, above, assumes that the coordinate system is located at the location of the interaction.  Therefore, in order to compare spherical harmonics for events with vertices not at the center of the detector volume, a coordinate transformation for each photon hit is needed. The necessary transformation applied for each PE within an event is illustrated in Fig.~\ref{fig:SphH_transform}. The solid circle in the Figure has a radius, R, and shows the actual detector boundaries. The dotted circle shows a new sphere with the same radius R, which now has the event vertex in its center. The radius vector of each PE is stretched or shorten to its intersection with this new sphere using the transformation, $\vec{r}^{,}_{PE} = \frac{\vec{a}}{|\vec{a}|} \cdot R$, where $\vec{r}^{,}_{PE}$ is a new radius vector of a PE and $\vec{a}=\vec{r}_{PE} - \vec{r}_{vtx}$ with $\vec{r}_{PE}$ and $\vec{r}_{vtx}$ being radius vectors of the PE and the vertex in the original coordinates, respectively.
+In general, the power spectrum $S_l$ is rotation invariant for a given topology only if events originate in the center of the
+detector. In order to compare spherical harmonics for events with vertices away from the center a coordinate transformation for each photon 
+hit is needed. The necessary transformation applied for each PE within an event is illustrated in Fig.~\ref{fig:SphH_transform}. 
+The solid circle in Fig.~\ref{fig:SphH_transform}~has a radius R and shows the actual detector boundaries. The dotted circle shows a new 
+sphere with the same radius R, which now has the event vertex in its center. The radius vector of each PE is stretched or shorten to 
+its intersection with this new sphere using the transformation, $\vec{r}^{,}_{PE} = \frac{\vec{a}}{|\vec{a}|} \cdot R$, 
+where $\vec{r}^{,}_{PE}$ is a new radius vector of a PE and $\vec{a}=\vec{r}_{PE} - \vec{r}_{vtx}$ with $\vec{r}_{PE}$ and $\vec{r}_{vtx}$ 
+being radius vectors of the PE and the vertex in the original coordinates, respectively.
 
 \begin{figure*}[h]
   \centering
@@ -201,13 +219,25 @@ The calculation of the normalized power spectrum, $S_I$, above, assumes that the
 
 \subsection{Implementation of the spherical harmonics analysis}
 
-For each event, we create a 2-D histogram, $\theta$ vs $\phi$, with the distribution of PEs on the detector surface. We then treat this histogram as a function $f(\theta,\phi)$ where the value of the function for any pair of $\theta$ and $\phi$ is equal to the number of PE in the histogram bin corresponding to that pair.
+Numerical calculation of the power spectrum is implemented as follows.
+For each event, we create a 2-D histogram, $\theta$ vs $\phi$, with the distribution of PEs on the detector surface. We then treat this 
+histogram as a function $f(\theta,\phi)$ where the value of the function for any pair of $\theta$ and $\phi$ is equal to the number of 
+PE in the histogram bin corresponding to that pair.
 
-Coefficients $f_{lm}$ from Eq.~\ref{eq3} are calculated using a Monte Carlo integration technique. Variables $S_0$, $S_1$, $S_2$, and $S_3$ are calculated using Eqs.\ref{eq4} - \ref{eq6}.
+Coefficients $f_{lm}$ from Eq.~\ref{eq3} are calculated using a Monte Carlo integration technique. Variables $S_l$'s are calculated using 
+Eqs.\ref{eq4} - \ref{eq6}. {\bf Also need to provide reference to the libraries for Legandre polinomials.}
 
+\textbf{ I'm thinking of removing Figs~\ref{fig:SL_topologies_CHE}-\ref{fig:SL_topologies_all}, thus the following paragraphs are in Italic. 
+I think bottom pannels in Figs.~\ref{fig:ThreeTopologies_Display_5MeV}-\ref{fig:Te130_Display} convey enough info that it only make sense to use
+$S_0$ and $S_1$}
+
+\begingroup
+  \itshape
 To illustrate spherical harmonics analysis technique we compare distributions of $S_0$, $S_1$, $S_2$, and $S_3$ for the three representative event topologies described in Sec.~\ref{subsec:topology}. Almost all the information about event topology is carried by Cherenkov light. Therefore we first show spherical harmonics for back-to-back,  90$^{\circ}$ and single track topologies based on Cherenkov PEs only (see Fig.~\ref{fig:SL_topologies_CHE}).
 
 Two top panels of Fig.~\ref{fig:SL_topologies_CHE} show 2-dimensional distributions, S0 vs S1 and S2 vs S3, to demonstrate that all four $S_l$'s provide separation between event topologies. No QE is applied in simulation of these events. We also introduce a 1-dimensional variable, S01 (bottom panel of Fig.~\ref{fig:SL_topologies_CHE}), that has the best separation power for majority of event topologies considered in this paper. $S_{01}$ is defined as a projection of S$_1$ vs S$_2$ distribution onto a linear fit of this 2-D distribution.
+
+%\endgroup
 
 \begin{figure*}[h]
   \centering
@@ -262,6 +292,8 @@ The effects due to the presence of scintillation light and applying the default 
 \label{fig:SL_topologies_all}
 \end{figure*}
 
+
+\endgroup
 
 
 \subsection{Spherical harmonics analysis of \C~background events}
